--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
             "type": "git",
             "url": "https://github.com/dhii/shell-interop"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "Dhii\\Shell\\": "src/"
+        }
+    }
 }
