--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "dhii/shell-command-interop": "^0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.3"
+        "phpunit/phpunit": "~4.0"
     },
     "repositories": [
         {
