Updated Travis config
Composer will now ignore platform requirements during installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - nightly
   
 before_script:
-  - composer install -n
+  - composer install -n --ignore-platform-reqs php
   - composer update phpunit/phpunit
 
 script:
