--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ php:
   - nightly
   
 before_script:
-  - composer install -n --ignore-platform-reqs
-  - composer update phpunit/phpunit
+  - composer update
 
 script:
   - phpunit
